# katt

./: .gitignore  CHANGELOG.md  README.md  config.json.init  config.nix  default.nix  katt.cabal  release.nix  req.nix
src/: Main.hs
